<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".presentation.Home">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/easypizy"
        android:textSize="30sp"
        android:textStyle="bold|normal"
        android:textColor="#FF1E90FF"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/menu"
        android:layout_marginTop="-2dp"
        android:columnCount="1"
        android:orientation="horizontal"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="487dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_place"
                android:layout_width="0dp"
                android:layout_height="310dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/place_button"
                android:drawableTop="@drawable/drawable_resize_place"
                android:drawablePadding="1dp"
                android:paddingTop="80dp"
                android:text="@string/place"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_record"
                android:layout_width="0dp"
                android:layout_height="310dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/record_button"
                android:drawableTop="@drawable/drawable_resize_record"
                android:drawablePadding="1dp"
                android:paddingTop="80dp"
                android:text="@string/record"
                android:textColor="@color/white"
                android:textSize="21sp" />

        </LinearLayout>
    </GridLayout>
</RelativeLayout>

